add test script

--- a/sentinelsat/sentinelsat_test.ipynb
+++ b/sentinelsat/sentinelsat_test.ipynb
@@ -10,8 +10,8 @@
     "from datetime import date\n",
     "import geopandas as gpd\n",
     "\n",
-    "# connect to the API\n",
-    "api = SentinelAPI('wale', 'LetMeCopernicusGeorgeHotzisthebest1141993a', 'https://apihub.copernicus.eu/apihub/')"
+    "# connect to the API:change accordingly\n",
+    "api = SentinelAPI('user', 'pw', 'https://apihub.copernicus.eu/apihub/')"
    ]
   },
   {
